--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" defer></script>
-	<script type="text/javascript" src="js/scripts.js" defer></script>	
+	<script type="text/javascript" src="js/script.js" defer></script>	
 	<title>Zadanie 11.5</title>
 	<!--<link rel="stylesheet" href="css/style.css">-->
 </head>
@@ -12,6 +12,6 @@
 		
 		
 
-	<script type="text/javascript" src="js/scripts.js"></script>	
+	
 </body>
 </html>
